update privacy policy links

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -264,7 +264,7 @@ sidebar:
     login: 'Login'
 
 footer:
-    terms: 'Terms of Use'
+    terms: 'Privacy Policy'
 
 login:
     title: 'Login to Captain Coaster'
