--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -264,7 +264,7 @@ sidebar:
     login: 'Se connecter'
 
 footer:
-    terms: 'Mentions légales'
+    terms: 'Politique de confidentialité'
 
 login:
     title: 'Se connecter'
