"Indoor" dans les 3 langues
Traductions de Indoor pour l'affichage

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -53,6 +53,7 @@ coaster:
         vr: 'VR'
         cost: 'Cost'
         kiddie: 'Kiddie'
+        indoor: 'Indoor'
     parkcoaster: 'Also in %name%'
     photos:
         title: 'Photos'
