--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -8,7 +8,7 @@ app:
     title:
         default: 'Bienvenue !'
     header:
-        search: 'Toverland, Taiga...'
+        search: 'Plopsaland, Kondaa...'
 
 index:
     title: 'Bienvenue !'
