--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -19,7 +19,7 @@ index:
     stats:
         ratings: 'notes'
         reviews: 'avis'
-        tops: 'tops'
+        users: 'utilisateurs'
         images: 'photos'
     missingCoasters: 'Nous recherchons des photos pour ces coasters !'
 
@@ -83,17 +83,17 @@ park:
     kiddies: 'kiddie|kiddies'
 
 coaster_ranking:
-    title: 'Classement des meilleurs coasters - %rankingMonth%'
-    description: 'Classement des meilleurs montagnes russes du monde, par nos utilisateurs. Donne ton avis et met des notes pour participer à ce classement des coasters.'
+    title: 'Classement Mondial des Roller Coasters'
+    description: 'Découvrez quels sont les meilleurs roller coasters du monde, grâce à notre classement mondial ! Basé sur plusieurs milliers de notes et de reviews, par 3000 utilisateurs du monde entier.'
     duel_number: '1 duel|%count% duels'
     no_results: 'Pas de coaster'
     info:
-        title: 'Ce mois-ci'
+        title: 'Mis à jour: %rankingMonth%'
         next: 'Prochaine mise à jour %date%'
         coasters_ranked: 'coasters classés'
         ratings: 'notes'
         comparisons: 'comparaisons analysées'
-        in_tops: 'coasters dans les Tops'
+        users: 'votants'
     filter:
         continent: 'Monde'
         country: 'Pays'
@@ -255,7 +255,7 @@ navbar:
 sidebar:
     index: 'Accueil'
     search: 'Coasters à proximité'
-    ranking: 'Classement des coasters'
+    ranking: 'Classement Mondial des Coasters'
     users: 'Nos riders'
     map: 'Carte des coasters'
     top: 'Les tops'
@@ -295,7 +295,8 @@ notif:
     badge:
         message: 'Wahou, le Captain vient de te décerner le badge "%name%" !'
     ranking:
-        message: 'Le classement des meilleurs coasters du monde a été mis à jour !'
+        message: 'Le classement mondial des coasters du monde vient d''être mis à jour !'
+        messageWithNewCoaster: 'Le classement mondial des coasters du monde vient d''être mis à jour. %name% a été ajouté au classement !'
     email:
         title: '🎢 Nouvelle notification sur Captain Coaster'
         gotnotif: 'Tu viens de recevoir une notification sur Captain Coaster :'
