Adding closest parks to Park page
List parks near the selected park (park is less than 300km away and has a coaster scoring higher than 80)

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -37,6 +37,7 @@ coaster:
         text: 'Score based on %count_rating% ratings and %count_top% tops'
     infos:
         title: '%name% features'
+        closeParksTitle: 'Best amusement parks near %parkName%'
         status: 'Status'
         park: 'Park'
         country: 'Country'
