--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -35,6 +35,7 @@ coaster:
         text: 'Resultado basada en %count_rating% notas y %count_top% tops'
     infos:
         title: 'Características de %name%'
+        closeParksTitle: 'Los mejores parques de atracciones cerca de %parkName%'
         status: 'Estatus'
         park: 'Parque de atracciones'
         country: 'País'
