--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -34,6 +34,8 @@ coaster:
         mustlogin: 'Il faut être connecté pour noter.'
         login: 'Se connecter'
         sendreview: 'ou clique ici pour donner ton avis'
+        updatereview: 'modifier mon avis'
+        delete: 'supprimer'
         text: 'Score basé sur %count_rating% notes et %count_top% tops'
     infos:
         title: 'Caractéristiques de %name%'
