[#47] Change closest parks icon to label link

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -39,7 +39,8 @@ coaster:
         text: 'Score basé sur %count_rating% notes et %count_top% tops'
     infos:
         title: 'Caractéristiques de %name%'
-        closeParksTitle: 'Les meilleurs parcs d''attractions proche de %parkName%'
+        closeParksTitle: 'Les meilleurs parcs d''attractions proches de %parkName%'
+        closeParksLink: 'Visualiser %parkName% sur la carte'
         status: 'Statut'
         park: 'Parc'
         country: 'Pays'
