--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -36,6 +36,7 @@ coaster:
     infos:
         title: 'Características de %name%'
         closeParksTitle: 'Los mejores parques de atracciones cerca de %parkName%'
+        closeParksLink: 'Ver %parkName% en el mapa'
         status: 'Estatus'
         park: 'Parque de atracciones'
         country: 'País'
