--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -8,7 +8,7 @@ app:
     title:
         default: '¡ Bienvenido !'
     header:
-        search: 'Mirabilandia, Shambhala...'
+        search: 'Parque Warner, Uncharted...'
 
 index:
     title: '¡ Bienvenido !'
