--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -8,7 +8,7 @@ app:
     title:
         default: 'Bienvenue !'
     header:
-        search: 'Plopsaland, Kondaa...'
+        search: 'Toutatis, Parque Warner...'
 
 index:
     title: 'Bienvenue !'
