--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -15,7 +15,7 @@ index:
     description: 'Guide participatif pour découvrir, noter, et donner ton avis sur tous les coasters. Le classement des meilleurs coasters du monde est mis à jour chaque mois !'
     header:
         title: 'Notes, avis et classement des meilleurs coasters'
-        info: 'Space Mountain, c''est vraiment Hyper ? Que pensent les connaisseurs d''Oziris au Parc Asterix ? Où sont les Intamin qui ouvriront l''année prochaine ? Pas de panique, toutes les réponses sont ici ! Et pour en profiter, c''est très rapide : <b>2 clics suffisent pour <a href="%link_path%">se connecter</a>.</b> Suivez le Captain !'
+        info: 'Space Mountain, c''est vraiment Hyper ? Que pensent les connaisseurs d''Oziris au Parc Asterix ? Où sont les Intamin qui ouvriront l''année prochaine ? Pas de panique, toutes les réponses sont ici ! Et pour en profiter, c''est très rapide : <b>2 clics suffisent pour <a href="{link_path}">se connecter</a>.</b> Suivez le Captain !'
     stats:
         ratings: 'notes'
         reviews: 'avis'
@@ -36,10 +36,10 @@ coaster:
         sendreview: 'ou clique ici pour donner ton avis'
         updatereview: 'modifier mon avis'
         delete: 'supprimer'
-        text: 'Score basé sur %count_rating% notes et %count_top% tops'
+        text: 'Score basé sur {count_rating} notes et {count_top} tops'
     infos:
-        title: 'Caractéristiques de %name%'
-        closeParksTitle: 'Les meilleurs parcs d''attractions proche de %parkName%'
+        title: 'Caractéristiques de {name}'
+        closeParksTitle: 'Les meilleurs parcs d''attractions proche de {parkName}'
         status: 'Statut'
         park: 'Parc'
         country: 'Pays'
@@ -57,7 +57,7 @@ coaster:
         cost: 'Coût'
         kiddie: 'Kiddie'
         indoor: 'Indoor'
-    parkcoaster: 'Coasters de %name%'
+    parkcoaster: 'Coasters de {name}'
     photos:
         title: 'Photos'
         empty: 'Oups, nous n''avons pas encore de photo pour ce coaster, mais tu peux envoyer les tiennes!'
@@ -66,7 +66,7 @@ coaster:
     location: 'Localisation'
 
 image_upload:
-    title: 'Envoyer une photo de "%coaster%"'
+    title: 'Envoyer une photo de "{coaster}"'
     form:
         file:
             label: 'Choisis une photo'
@@ -82,17 +82,17 @@ image_upload:
         success: 'La photo a été envoyée. Elle sera validée par un administrateur avant affichage.'
 
 park:
-    opened_coasters: 'coaster ouvert|coasters ouverts'
-    kiddies: 'kiddie|kiddies'
+    opened_coasters: '{ count, plural, one { coaster ouvert } other { coasters ouverts }}'
+    kiddies: '{ count, plural, one { kiddie } other { kiddies }}'
 
 coaster_ranking:
     title: 'Classement Mondial des Roller Coasters'
     description: 'Découvrez quels sont les meilleurs roller coasters du monde, grâce à notre classement mondial ! Basé sur plusieurs milliers de notes et de reviews, par 3000 utilisateurs du monde entier.'
-    duel_number: '1 duel|%count% duels'
+    duel_number: '1 duel|{count} duels'
     no_results: 'Pas de coaster'
     info:
-        title: 'Mis à jour: %rankingMonth%'
-        next: 'Prochaine mise à jour %date%'
+        title: 'Mis à jour: {rankingMonth}'
+        next: 'Prochaine mise à jour {date}'
         coasters_ranked:
             short: 'coasters'
             long: 'coasters classés'
@@ -120,13 +120,13 @@ map_index:
         kiddie: 'Masquer les kiddies'
         notridden: 'Pas encore ridé'
         score: 'Score'
-        atleast: 'au moins %count%'
+        atleast: 'au moins {count}'
         openingDate: 'Date d''ouverture'
         name: 'Nom'
     results: 'Résultats'
 
 user_profile:
-    title: 'Profil de %name%'
+    title: 'Profil de {name}'
     ratings: 'Voir ses notes'
     reviews: 'Voir ses avis'
     main_top: 'Voir son Top Coasters'
@@ -140,7 +140,7 @@ user_list:
         title: 'Alors, t''en es où dans tes notes ?'
         text: 'Cette page présente tous nos riders. Clique sur l''un d''eux pour avoir plus de détails !'
     member_from: 'Membre depuis le'
-    rating: '1 note|%count% notes'
+    rating: '{ count, plural, one { # note } other { # notes }}'
 
 me:
     title: 'Mon Profil'
@@ -226,13 +226,13 @@ review:
     all: 'Voir plus →'
     ridden_at: 'Date du ride'
     form:
-        title: 'Avis sur %name%'
+        title: 'Avis sur {name}'
 
 users:
     tops:
-        title: 'Tops de %name%'
+        title: 'Tops de {name}'
     ratings:
-        title: 'Notes de %name%'
+        title: 'Notes de {name}'
         coaster: 'Coaster'
         manufacturer: 'Contructeur'
         opening_date: 'Ouverture'
@@ -241,16 +241,16 @@ users:
     my_ratings:
         title: 'Mes notes'
     reviews:
-        title: 'Avis de %name%'
+        title: 'Avis de {name}'
     images:
-        title: 'Photos de %name%'
+        title: 'Photos de {name}'
 
 review_list:
     title: 'Tous les avis'
 
 rating:
     last: 'Dernières notes'
-    action: 'a mis la note de %value% à'
+    action: 'a mis la note de {value} à'
 
 navbar:
     profile: 'Mon Profil'
@@ -294,28 +294,28 @@ contact:
     email:
         title: 'Contact - Captain Coaster'
     flash:
-        success: 'Merci %name%, ton email a été envoyé à l''équipe de Captain Coaster.'
+        success: 'Merci {name}, ton email a été envoyé à l''équipe de Captain Coaster.'
 
 notif:
     title: 'Activité'
     empty: 'Rien de spécial pour le moment, va plutôt rider !'
     badge:
-        message: 'Wahou, le Captain vient de te décerner le badge "%name%" !'
+        message: 'Wahou, le Captain vient de te décerner le badge "{name}" !'
     ranking:
         message: 'Le classement mondial des coasters du monde vient d''être mis à jour !'
-        messageWithNewCoaster: 'Le classement mondial des coasters du monde vient d''être mis à jour. %name% a été ajouté au classement !'
+        messageWithNewCoaster: 'Le classement mondial des coasters du monde vient d''être mis à jour. {name} a été ajouté au classement !'
     email:
         title: '🎢 Nouvelle notification sur Captain Coaster'
         gotnotif: 'Tu viens de recevoir une notification sur Captain Coaster :'
-        view: 'Afficher ceci sur <a href="%link_path%">CaptainCoaster.com</a>'
-        unsubscribe: 'Pour ne plus recevoir ceci, merci de changer vos <a href="%link_path%">préférences de notification</a>.'
+        view: 'Afficher ceci sur <a href="{link_path}">CaptainCoaster.com</a>'
+        unsubscribe: 'Pour ne plus recevoir ceci, merci de changer vos <a href="{link_path}">préférences de notification</a>.'
 
 search_index:
     title: 'Coasters à proximité'
-    num_found: '%num% coasters trouvés'
+    num_found: '{num} coasters trouvés'
     geo_on: 'Localisation activée'
     geo_off: 'Localisation désactivée'
-    km_away: '%num% km'
+    km_away: '{num} km'
 
 badge:
     rating1: '1ère note'
@@ -327,7 +327,7 @@ badge:
     teamispeed: 'Team iSpeed'
 
 image:
-    credit: 'Crédit: %name%'
+    credit: 'Crédit: {name}'
 
 error:
     400:
