--- a/translations/policy+intl-icu.fr.yml
+++ b/translations/policy+intl-icu.fr.yml
@@ -17,7 +17,7 @@ privacy:
            <li>d''accès et de rectification - en cas d''informations erronnées et/ou manquantes,</li>
            <li>de suppression définitive du compte et de toutes ses données,</li>
            </ul>
-           <p>Pour ce faire, l''utilisateur doit nous contacter via le <a href="%link_href%">formulaire de contact</a> du site. La modification interviendra dans des délais raisonnables à compter de la réception de la demande de l''utilisateur.</p>'
+           <p>Pour ce faire, l''utilisateur doit nous contacter via le <a href="{link_href}">formulaire de contact</a> du site. La modification interviendra dans des délais raisonnables à compter de la réception de la demande de l''utilisateur.</p>'
 terms:
     title: 'Conditions d''utilisation'
     text: '<p>Captain Coaster est un site communautaire non-officiel pour les passionnés de montagnes russes et parcs d’attractions. Il n’est affilié à aucun parc, constructeur, ou société de l’industrie des loisirs. Il est géré par des bénévoles, remerciés uniquement par la gratitude des membres.</p>
@@ -29,11 +29,11 @@ hosting:
 copyright:
     title: 'Droits d''auteur'
     text: '<p>Le logo "Captain Coaster" et ses dérivés ont été créés par Benjamin R., qui en a donné les droits exclusifs d''utilisation et modification à l''équipe du site. Toute reproduction est interdite sans son accord écrit.</p>
-           <p>Tous les utilisateurs peuvent envoyer des photos sur le site, accompagnées du crédit. Si vous en êtes l''auteur et ne souhaitez pas les voir apparaître sur Captain Coaster, n''hésitez pas à <a href="%link_href%">nous contacter</a> pour demander leur suppression.</p>'
+           <p>Tous les utilisateurs peuvent envoyer des photos sur le site, accompagnées du crédit. Si vous en êtes l''auteur et ne souhaitez pas les voir apparaître sur Captain Coaster, n''hésitez pas à <a href="{link_href}">nous contacter</a> pour demander leur suppression.</p>'
 cookies:
     title: 'Cookies'
     text: '<p>Les cookies sont des petits fichiers informatiques que nous sauvegardons sur votre ordinateur pour vous simplifier la vie.</p>
            <p>Captain Coaster utilise notamment un cookie de connexion qui se souvient de votre session lorsque vous vous connectez. Vous n''avez ainsi pas à vous reconnecter à chacune de vos visites. Nous utlisons aussi un cookie Google Analytics à des fins statistiques.</p>'
 contact:
     title: 'Contact'
-    text: 'Une question, une remarque sur ces conditions ou le site en général ? <a href="%link_href%">Contactez nous</a>, on ne mord pas.'
+    text: 'Une question, une remarque sur ces conditions ou le site en général ? <a href="{link_href}">Contactez nous</a>, on ne mord pas.'
