--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -40,7 +40,7 @@ coaster:
     infos:
         title: '{name} features'
         closeParksTitle: 'Best amusement parks near {parkName}'
-        closeParksLink: 'View %parkName% on the map'
+        closeParksLink: 'View {parkName} on the map'
         status: 'Status'
         park: 'Park'
         country: 'Country'
