--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -40,6 +40,7 @@ coaster:
     infos:
         title: 'Caractéristiques de {name}'
         closeParksTitle: 'Les meilleurs parcs d''attractions proche de {parkName}'
+        closeParksLink: 'Visualiser {parkName} sur la carte'
         status: 'Statut'
         park: 'Parc'
         country: 'Pays'
