[#79] - Fix spanish translation

--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -123,7 +123,7 @@ users:
 
 review_list:
     title: 'Reseñas de montañas rusas'
-    no_review: 'No hay reseñas'
+    no_review: '¡ No hay reseñas !'
 
 rating:
     last: 'Últimas notas'
